Force Java 8 compat to avoid JCE errors on later JDK

--- a/build.xml
+++ b/build.xml
@@ -55,7 +55,7 @@
 	</target>
 
 	<target name="compile" depends="init">
-		<javac destdir="${build}" optimize="on"
+		<javac target="8" destdir="${build}" optimize="on"
 				classpathref="classpath"
 				includeantruntime="false"
 				debug="true" debuglevel="lines,vars,source">
