--- a/build.xml
+++ b/build.xml
@@ -55,10 +55,10 @@
 	</target>
 
 	<target name="compile" depends="init">
-		<javac target="8" destdir="${build}" optimize="on"
+		<javac target="8" source="8" destdir="${build}" optimize="on"
 				classpathref="classpath"
 				includeantruntime="false"
-				debug="true" debuglevel="lines,vars,source">
+				debug="false" debuglevel="lines,vars,source">
 			<src path="${java}"/>
 			<!--<compilerarg value="-Xlint:unchecked"/>-->
 		</javac>
